--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Grid/Orbita.Controles.Grid.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Grid/Orbita.Controles.Grid.csproj
@@ -253,6 +253,10 @@
       <Project>{3FC7CCF4-13B4-4B2B-95A9-CC178C85C343}</Project>
       <Name>Orbita.Controles.Menu</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Shared\Orbita.Controles.Shared.csproj">
+      <Project>{D104B7D1-93CB-46AE-8F84-AA68BB3B2C5E}</Project>
+      <Name>Orbita.Controles.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
