--- a/CodigoFuente/x32/Orbita/Orbita.BBDD/Orbita.BBDD.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.BBDD/Orbita.BBDD.csproj
@@ -115,6 +115,11 @@
     <Compile Include="Conexión\OConexiones.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trazabilidad\Core\TrazaLogger.cs" />
+    <Compile Include="Trazabilidad\Interfaces\ITraza.cs" />
+    <Compile Include="Trazabilidad\Logger\BaseTraza.cs" />
+    <Compile Include="Trazabilidad\Repositorio\SimpleTraza.cs" />
+    <Compile Include="Trazabilidad\Repositorio\TrazaManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -132,6 +137,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
+      <Project>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</Project>
+      <Name>Orbita.Trazabilidad</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
