--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
@@ -171,6 +171,9 @@
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="Orbita.Xml">
+      <HintPath>..\..\Comun\Orbita\Orbita.Xml.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
