--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
@@ -166,9 +166,15 @@
       <HintPath>..\..\Comun\Orbita\Orbita.BBDD.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="Orbita.MS">
+      <HintPath>..\..\Comun\Orbita\Orbita.MS.dll</HintPath>
+    </Reference>
     <Reference Include="Orbita.Utiles, Version=13.43.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
+    </Reference>
+    <Reference Include="Orbita.Xml">
+      <HintPath>..\..\Comun\Orbita\Orbita.Xml.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Private>False</Private>
