--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
@@ -102,9 +102,8 @@
     <Reference Include="Infragistics2.Win.v11.2">
       <HintPath>..\..\Comun\Controles\Infragistics\V11-2\Infragistics2.Win.v11.2.dll</HintPath>
     </Reference>
-    <Reference Include="Orbita.Utiles, Version=13.43.8.1, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="Orbita.Utiles">
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Orbita.VA.Comun, Version=13.1.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.VA.Comun.dll</HintPath>
@@ -117,6 +116,9 @@
     <Reference Include="Orbita.VA.MaquinasEstados, Version=13.1.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.VA.MaquinasEstados.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
+    </Reference>
+    <Reference Include="Orbita.Xml">
+      <HintPath>..\..\Comun\Orbita\Orbita.Xml.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
