--- a/CodigoFuente/x32/Pruebas/Orbita.Test/Orbita.Test.csproj
+++ b/CodigoFuente/x32/Pruebas/Orbita.Test/Orbita.Test.csproj
@@ -43,12 +43,19 @@
     <Reference Include="Infragistics2.Win.UltraWinDock.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
     <Reference Include="Infragistics2.Win.UltraWinEditors.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="Infragistics2.Win.UltraWinExplorerBar.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
+    <Reference Include="Infragistics2.Win.UltraWinGrid.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="Infragistics2.Win.UltraWinMaskedEdit.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
     <Reference Include="Infragistics2.Win.UltraWinStatusBar.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
     <Reference Include="Infragistics2.Win.UltraWinToolbars.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="Infragistics2.Win.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
+    <Reference Include="Orbita.BBDD">
+      <HintPath>..\..\Comun\Orbita\Orbita.BBDD.dll</HintPath>
+    </Reference>
     <Reference Include="Orbita.Comunicaciones">
       <HintPath>..\..\Comun\Orbita\Orbita.Comunicaciones.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Controles.Combo">
+      <HintPath>..\..\Orbita.Controles\Orbita.Controles.Combo\obj\x86\Release\Orbita.Controles.Combo.dll</HintPath>
     </Reference>
     <Reference Include="Orbita.Controles.Comunes, Version=13.70.5.1, Culture=neutral, processorArchitecture=x86" />
     <Reference Include="Orbita.Controles.Shared, Version=13.70.5.1, Culture=neutral, processorArchitecture=x86" />
@@ -66,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BDatos.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
